--- a/Now.API/Now.API.csproj
+++ b/Now.API/Now.API.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="YoutubeExplode" Version="6.3.9" />
+    <!-- Audio processing libraries will be added here -->
   </ItemGroup>
 
 </Project>
